--- a/whatsapp_frontend/package.json
+++ b/whatsapp_frontend/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-countup": "^6.5.3",
