--- a/whatsapp_frontend/package.json
+++ b/whatsapp_frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
+    "redoc": "^2.4.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
