--- a/whatsapp_frontend/package.json
+++ b/whatsapp_frontend/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.4.6",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "qr-code-styling": "^1.9.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
